--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-host= 'host',
-port= 5432,
-username= 'username',
+DB_HOST= 'host',
+DB_PORT= 5432,
+DB_USERNAME= 'username',
 password= 'password',
 database= "database",
